--- a/web_flask/templates/6-number_odd_or_even.html
+++ b/web_flask/templates/6-number_odd_or_even.html
@@ -5,6 +5,6 @@
     <TITLE>HBNB</TITLE>
 </HEAD>
 <BODY>
-    <H1>Number: {{ n }} is {{ result }}</H1>
+    <H1>Number: {{ n }} is {{ results }}</H1>
 </BODY>
 </HTML>
