--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -7,11 +7,13 @@
 <BODY>
     <H1>States</H1>
     <Ul>
-        {% for state in states %}
-        <LI>
-            {{ state.id }}: <B>{{ state.name }}</B>
-        </LI>
-        {% endfor %}
+        {% if states %}
+            {% for state in states.values()|sort(attributes='name') %}
+            <LI>
+                {{ state['id'] }}: <B>{{ state['name']}}</B>
+            </LI>
+            {% endfor %}
+        {% endif %}
     </Ul>
 </BODY>
 </HTML>
