--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -8,7 +8,7 @@
     <H1>States</H1>
     <Ul>
         {% if states %}
-            {% for state in states.values()|sort(attributes='name') %}
+            {% for state in states.values()|sort(attribute='name') %}
             <LI>
                 {{ state['id'] }}: <B>{{ state['name']}}</B>
             </LI>
